--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -16,6 +16,9 @@
 # Uncomment the following lines to make the configuration take effect.
 
 PreCommit:
+ ScssLint:
+  enabled: true
+
  RuboCop:
    enabled: true
    on_warn: fail # Treat all warnings as failures
